<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">WREK Online</string>
    <string name="app_name_full">WREK Online for Android</string>
    <string name="action_settings">Settings</string>
	<string name="action_about">About</string>
	<string name="app_station_id">WREK Online</string>
	<string name="show_logo">Show Logo</string>
	<string name="downloading_schedule">Downloading schedule. . .</string>
	<string name="downloading_schedule_error">Unable to download the list of available shows. Please check your Internet connection and try again.</string>
	
	<string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    
    <string name="placeholder_title">WREKage</string>
    <string name="placeholder_genre">Metal, Black Metal, Death Metal, Heavy Metal</string>
    <string name="placeholder_showtime">Sat 5/24 12:00 AM</string>
    <string name="placeholder_nowplaying">Now Playing: WREKage (3 of 12)</string>
    
    <string name="buttonPrevText">&lt;&lt;</string>
    <string name="buttonNextText">&gt;&gt;</string>
    
    <string name="settingsActivityTitle">Settings</string>
    <string name="settingsGeneralHeader">General</string>
    <string name="settingsBitrateTitle">Streaming bitrate</string>
    
    <string name="aboutActivityTitle">About</string>
    
    <string name="bitrate_entry_automatic">Auto</string>
    <string name="bitrate_entry_high">High (128 kbit/sec)</string>
    <string name="bitrate_entry_low">Low (24 kbit/sec)</string>
    
    <string name="bitrate_value_automatic">0</string>
    <string name="bitrate_value_high">1</string>
    <string name="bitrate_value_low">2</string>
    
    <string name="bitrate_summary_automatic">Auto - While on Wifi, stream audio at a high quality bitrate. When on a cellular connection, stream at a lower bitrate.</string>
    <string name="bitrate_summary_high">High (128 kbit/sec)</string>
    <string name="bitrate_summary_low">Low (24 kbit/sec)</string>
    
    <string name="preference_enableproxy">Song Titles</string>
    <string name="preference_enableproxy_summary">If enabled, song titles will be shown when available. This setting is intended for troubleshooting quality issues. If you are having trouble connecting or listening to the live radio streams, you can try disabling this setting.</string>
    
    <string name="about_wrek_title"><b><u>About WREK Atlanta</u></b></string>
    <string name="about_wrek_content">WREK is the entirely student managed, operated and engineered radio station at Georgia Tech in Atlanta. WREK broadcasts 24 hours a day from the Georgia Tech Student Center on 91.1 FM with 100,000 watts throughout Atlanta. The station also broadcasts a divsersity of its current programming on an HD subchannel. The station offers its air signal online in addition to a two week mp3 archive of all recorded shows.\n\nWREK has been broadcasting since March 25th, 1968. Broadcasting from the top of the Van Leer Electrical Engineering building, the first song played over the air was \"Spooky\" by the Classics IV. Years later, the station moved to the offices adjacent to the Alexander Memorial Coliseum where it stayed until 2008 when it moved to the newly remodelled Student Center.\n\nSince then, names, faces, and clothing fashions may have changed, but the station-wide philosophy of providing diverse, quality programming to the Atlanta area and the world at large has remained unwavering.\n\nIn 1994, WREK became one of the first radio stations to stream its air signal over the Internet.</string>
    <string name="about_wrek_weblink">Follow WREK on the web: www.wrek.org</string>
    <string name="for_android">WREK Online for Android</string>
    <string name="version_label">"Version: "</string>
    <string name="dev_by">Developed by: John Selbie</string>
    <string name="feedback_email">Feedback: apps@selbie.com</string>
    <string name="feedback_group">Google Group Community Forum: &lt;a href="https://groups.google.com/d/forum/wrekandroid"&gt;wrekandroid&lt;a&gt;</string>
    <string name="wrek_comments_email">Contact WREK: comments@wrek.org</string>
    
    <string name="playpause_tag">playpause_tag</string>
    
    <string name="placeholder_timestamp">3:45 / 30:00</string>
       
    <string name="image">image</string>
    
    <string name="wrek_copyright">The primary content of this application including streamed audio, station emblems, logos, and show descriptions are copyright WREK Atlanta and the Georgia Institute of Technology.</string>
    
    <string name="ibiquity_copyright">HD Radio logo is a registered trademarks of iBiquity Digital Corporation. iBiquity is making these logos and materials available to licensed broadcasters for the sole purpose of promoting licensed HD Radio stations or technology.  By downloading one of these logos or materials, you are agreeing to 1) use the downloaded item solely for the promotion of licensed HD Radio stations or technology; 2) not change the downloaded item in any way; and 3) not use the downloaded item in association with any disparagement of iBiquity, HD Radio technology, or the HD Digital Radio Alliance, or in a way that would diminish or otherwise damage.</string>
    
    <string name="urlimageviewhelper">UrlImageViewHelper</string>
    <string name="apache_dutta">This software application makes use of open source software code. Credits are as follows:\n\nUrlImageViewHelper\nCopyright 2012 Koushik Dutta\n\nLicensed under the Apache License, Version 2.0 (the "License");you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\n
       http://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
    </string>
    
    <string name="app_license">This software application itself is released as open source. To obtain the software source code and its corresponding license agreement, visit https://github.com/jselbie/wrekonline</string>
    
	<color name="black">#FF000000</color>
	<color name="white">#FFFFFFFF</color>
	


</resources>
