<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal"
	android:background="@color/black" >

    <SeekBar
    	android:id="@+id/seekBar"
    	android:layout_width="0dp"
    	android:layout_height="wrap_content"
    	android:layout_gravity="center"
    	android:layout_weight="1"
    	 />
    
    <Button android:id="@+id/buttonPrev" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/buttonPrevText" android:layout_marginTop="10dp" /> 
	
    <Button
    	android:id="@+id/buttonPlayStop"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_margin="10dp"
    	android:text="@string/play" />

    <Button android:id="@+id/buttonNext" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/buttonNextText" android:layout_marginTop="10dp" /> 
    
    
    <TextView
        android:id="@+id/tvNowPlaying"
    	android:layout_width="0dp"
    	android:layout_height="match_parent"
    	android:layout_weight="1"
    	android:gravity="left|center"
    	android:text=""
    	android:textColor="@color/white" />

</LinearLayout>
