<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >


	<LinearLayout
	    android:layout_marginTop="30dp"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1" />
	
	    <ImageView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="2"
	        android:src="@drawable/logo" />
	
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1" />
	</LinearLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/for_android" />
        
    <TextView android:layout_marginTop="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dev_by" android:layout_gravity="center" />
    <TextView android:layout_marginTop="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/feedback_email" android:layout_gravity="center" />
    
    <TextView
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/about_wrek" />
    
</LinearLayout>

</ScrollView>
